tlab-monitored-fortress/main.tf
provider "aws" {
  region = "us-east-1"
}

# Fetch Latest Ubuntu 22.04 LTS AMI
data "aws_ami" "ubuntu" {
  most_recent = true
  owners      = ["099720109477"] # Canonical ID

  filter {
    name   = "name"
    values = ["ubuntu/images/hvm-ssd/ubuntu-jammy-22.04-amd64-server-*"]
  }

  filter {
    name   = "virtualization-type"
    values = ["hvm"]
  }
}

# ====================================================================
# STUDENT ARCHITECTURE: PERIMETER, WIRETAP, & ZERO TRUST COMPUTE
# ====================================================================

# 1. THE PERIMETER (VPC & Networking)
resource "aws_vpc" "titan_vpc" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_hostnames = true
  enable_dns_support   = true

  tags = {
    Name = "Titan-Prod-VPC"
  }
}

resource "aws_internet_gateway" "titan_igw" {
  vpc_id = aws_vpc.titan_vpc.id

  tags = {
    Name = "Titan-Prod-IGW"
  }
}

resource "aws_subnet" "public_subnet" {
  vpc_id                  = aws_vpc.titan_vpc.id
  cidr_block              = "10.0.1.0/24"
  map_public_ip_on_launch = true

  tags = {
    Name = "Titan-Public-Subnet"
  }
}

resource "aws_route_table" "public_rt" {
  vpc_id = aws_vpc.titan_vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.titan_igw.id
  }

  tags = {
    Name = "Titan-Public-RT"
  }
}

resource "aws_route_table_association" "public_rta" {
  subnet_id      = aws_subnet.public_subnet.id
  route_table_id = aws_route_table.public_rt.id
}

# 2. THE WIRETAP (CloudWatch & VPC Flow Logs)
resource "aws_cloudwatch_log_group" "titan_flow_logs_group" {
  name              = "/tkh/titan-prod-vpc-logs"
  retention_in_days = 1

  tags = {
    Name = "Titan-CloudWatch-LogGroup"
  }
}

resource "aws_flow_log" "titan_vpc_flow_log" {
  iam_role_arn    = aws_iam_role.flow_log_role.arn
  log_destination = aws_cloudwatch_log_group.titan_flow_logs_group.arn
  traffic_type    = "ALL"
  vpc_id          = aws_vpc.titan_vpc.id
}

# 3. ZERO TRUST COMPUTE (Security Group & Instance)
resource "aws_security_group" "zero_trust_sg" {
  name        = "Titan-Zero-Trust-SG"
  description = "Allows ZERO inbound traffic. Outbound only for SSM agent dialing."
  vpc_id      = aws_vpc.titan_vpc.id

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "Titan-Zero-Trust-SG"
  }
}

resource "aws_instance" "zero_trust_ubuntu" {
  ami                  = data.aws_ami.ubuntu.id
  instance_type        = "t3.micro" # Note: Change to "t3.micro" if t2.micro triggers an account free-tier error
  subnet_id            = aws_subnet.public_subnet.id
  iam_instance_profile = aws_iam_instance_profile.ssm_profile.name

  vpc_security_group_ids = [
    aws_security_group.zero_trust_sg.id
  ]

  tags = {
    Name = "Titan-ZeroTrust-Instance"
  }
}
